[gd_scene load_steps=4 format=3 uid="uid://c3p8q6xbvn8lx"]

[ext_resource type="Script" path="res://scenes/about-dialog/about-dialog.gd" id="1_about"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card2"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[node name="AboutDialog" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_about")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "About Godot Valet"

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Close"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="CardsVBox" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="AboutCard" type="PanelContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.75, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Godot Valet"

[node name="Subtitle" type="Label" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
text = "Project Management for Godot Developers"

[node name="License" type="Label" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.52, 0.55, 1)
theme_override_font_sizes/font_size = 11
text = "MIT License - Copyright (c) 2025 Poplava"

[node name="LinksHBox" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DiscordButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.85, 1, 1)
mouse_default_cursor_shape = 2
text = "Discord"
flat = true

[node name="GitHubButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.85, 1, 1)
mouse_default_cursor_shape = 2
text = "GitHub"
flat = true

[node name="MoreToolsButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.85, 1, 1)
mouse_default_cursor_shape = 2
text = "More Tools"
flat = true

[node name="LicensesCard" type="PanelContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_card2")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/LicensesCard"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/LicensesCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.92, 0.95, 1)
theme_override_font_sizes/font_size = 15
text = "Licenses"

[node name="LicenseTextEdit" type="TextEdit" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/LicensesCard/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false
wrap_mode = 1

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox/DiscordButton" to="." method="_on_discord_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox/GitHubButton" to="." method="_on_github_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ScrollContainer/MarginContainer2/CardsVBox/AboutCard/VBoxContainer/LinksHBox/MoreToolsButton" to="." method="_on_more_tools_button_pressed"]
